--- a/rime_ice.custom.yaml
+++ b/rime_ice.custom.yaml
@@ -7,6 +7,6 @@ patch:
 
   punctuator/symbols/+:
     '/zw': [【, 】, ── ]
+    'vzw': [【, 】, ── ]
     '/bq': [👍, 😂️, 🌹, 👌, 😱️, 🤝️, 🤭, 🤔️, 🤗]
-  punctuator/symbols/vbq: [👍, 😂️, 🌹, 👌, 😱️, 🤝️, 🤭, 🤔️, 🤗]
-  punctuator/symbols/vzw: [【, 】, ── ] 
+    'vbq': [👍, 😂️, 🌹, 👌, 😱️, 🤝️, 🤭, 🤔️, 🤗]
