--- a/rime_ice.custom.yaml
+++ b/rime_ice.custom.yaml
@@ -10,3 +10,5 @@ patch:
     'vzw': [【, 】, ── ]
     '/bq': [👍, 😂️, 🌹, 👌, 😱️, 🤝️, 🤭, 🤔️, 🤗]
     'vbq': [👍, 😂️, 🌹, 👌, 😱️, 🤝️, 🤭, 🤔️, 🤗]
+
+  translator/enable_correction: true 
