disable correction on macos

--- a/rime_ice.custom.yaml
+++ b/rime_ice.custom.yaml
@@ -11,4 +11,4 @@ patch:
     '/bq': [👍, 😂️, 🌹, 👌, 😱️, 🤝️, 🤭, 🤔️, 🤗]
     'vbq': [👍, 😂️, 🌹, 👌, 😱️, 🤝️, 🤭, 🤔️, 🤗]
 
-  translator/enable_correction: true 
+  translator/enable_correction: false
