update custom_phrase definition

--- a/rime_ice.custom.yaml
+++ b/rime_ice.custom.yaml
@@ -12,3 +12,5 @@ patch:
     'vbq': [👍, 😂️, 🌹, 👌, 😱️, 🤝️, 🤭, 🤔️, 🤗]
 
   translator/enable_correction: false
+
+  custom_phrase/user_dict: custom_phrase_phye
